--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "angularfire2": "^5.1.0",
     "core-js": "^2.5.4",
+    "firebase": "^5.5.9",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
