--- a/React_FrontEnd/prep-cs/package.json
+++ b/React_FrontEnd/prep-cs/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.3.4",
     "babel-loader": "^8.0.5",
     "brace": "^0.11.1",
     "react": "^16.8.3",
     "react-ace": "^6.4.0",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "react-tabs": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
