--- a/React_FrontEnd/prep-cs/package.json
+++ b/React_FrontEnd/prep-cs/package.json
@@ -9,6 +9,7 @@
     "react": "^16.8.3",
     "react-ace": "^6.4.0",
     "react-dom": "^16.8.3",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "react-tabs": "^3.0.0"
   },
