--- a/React_FrontEnd/prep-cs/package.json
+++ b/React_FrontEnd/prep-cs/package.json
@@ -6,12 +6,14 @@
     "@babel/core": "^7.3.4",
     "babel-loader": "^8.0.5",
     "brace": "^0.11.1",
+    "firebase": "^5.8.6",
     "react": "^16.8.3",
     "react-ace": "^6.4.0",
     "react-dom": "^16.8.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
-    "react-tabs": "^3.0.0"
+    "react-tabs": "^3.0.0",
+    "recompose": "^0.30.0"
   },
   "scripts": {
     "start": "react-scripts start",
