--- a/React_FrontEnd/prep-cs/package.json
+++ b/React_FrontEnd/prep-cs/package.json
@@ -10,6 +10,9 @@
     "react": "^16.8.3",
     "react-ace": "^6.4.0",
     "react-dom": "^16.8.3",
+    "react-native": "^0.59.0",
+    "react-native-elements": "^1.1.0",
+    "react-native-web": "^0.10.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "react-tabs": "^3.0.0",
