--- a/React_FrontEnd/prep-cs/package.json
+++ b/React_FrontEnd/prep-cs/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.3.4",
+    "@material-ui/core": "^3.9.2",
     "babel-loader": "^8.0.5",
     "brace": "^0.11.1",
     "firebase": "^5.8.6",
