--- a/React_FrontEnd/prep-cs/package.json
+++ b/React_FrontEnd/prep-cs/package.json
@@ -10,6 +10,7 @@
     "firebase": "^5.8.6",
     "react": "^16.8.3",
     "react-ace": "^6.4.0",
+    "react-art": "^16.8.5",
     "react-dom": "^16.8.3",
     "react-native": "^0.59.0",
     "react-native-elements": "^1.1.0",
