--- a/React_FrontEnd/prep-cs/package.json
+++ b/React_FrontEnd/prep-cs/package.json
@@ -5,13 +5,29 @@
   "dependencies": {
     "@babel/core": "^7.3.4",
     "@material-ui/core": "^3.9.2",
+    "@progress/kendo-react-intl": "^2.8.0",
     "babel-loader": "^8.0.5",
     "brace": "^0.11.1",
+    "cldr": "^5.0.1",
+    "cldr-core": "^35.0.0",
+    "cldr-data": "^34.0.0",
+    "cldr-data-coverage": "full",
+    "cldr-dates-full": "^35.0.0",
+    "cldr-numbers-full": "^35.0.0",
+    "cldrjs": "^0.5.1",
     "firebase": "^5.8.6",
+    "globalize": "^1.4.2",
+    "globalize-compiler": "^1.0.0",
+    "globalize-webpack-plugin": "^3.0.0",
+    "globalizejs": "0.0.1",
+    "moment": "^2.24.0",
     "react": "^16.8.3",
     "react-ace": "^6.4.0",
     "react-art": "^16.8.5",
+    "react-big-calendar": "^0.20.4",
+    "react-big-scheduler": "^0.2.6",
     "react-dom": "^16.8.3",
+    "react-globalize": "^1.0.0",
     "react-native": "^0.59.0",
     "react-native-elements": "^1.1.0",
     "react-native-web": "^0.10.1",
