Redirect to home after login.  Fix editor onChange function. Add firebase deployment files.

--- a/React_FrontEnd/prep-cs/package.json
+++ b/React_FrontEnd/prep-cs/package.json
@@ -2,6 +2,7 @@
   "name": "prep-cs",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@babel/core": "^7.3.4",
     "@material-ui/core": "^3.9.2",
