--- a/React_FrontEnd/prep-cs/.gitignore
+++ b/React_FrontEnd/prep-cs/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# don't know that these files are but I don't think we should add them to the
+# source tree.
+*~
+
 # dependencies
 /node_modules
 /.pnp
@@ -10,6 +14,7 @@
 
 # production
 /build
+/firebase_public
 
 # misc
 .DS_Store
@@ -17,6 +22,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.firebase
 
 npm-debug.log*
 yarn-debug.log*
